--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -204,6 +204,7 @@ section#header h3 {
   font-size: 5em;
   float:left;
   margin: 0;
+  padding-left: 20px;
   /*width:286px;
   height:70px;
   background-image:url('img/burrd_large.png');
